updating layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,14 @@
+// FIX ME need to add button active states
+/*button:active {
+  border: 2px solid #000;
+}*/
+
+#footer {
+  background: orange;
+  height: 20% !important;
+  overflow: hidden;
+}
+
 #canvasArea { 
   position: relative;
 }
@@ -7,19 +18,14 @@
 }
 .toolbar {
   background: #ccc;
-  position: absolute;
+  position: fixed;
   bottom: -200px;
   width: 100%;
   //height: 20px;
 }
 
-#container {
-  height: 480px;
-  overflow: hidden;
-}
-
 #done-panel {
-  position: absolute;
+  position: fixed;
   width: 100%;
   bottom: -300px;
   z-index: 9999;
